<resources>
    <string name="app_name">WatchCorn</string>
    <string name="skip_text">Skip</string>
    <string name="what_do_you_like">WHAT DO YOU LIKE?</string>
    <string name="wdyl_description_text">Give us a hint about the genres you like</string>
    <string name="musical_text">Musical</string>
    <string name="animation_text">Animation</string>
    <string name="action_text">Action</string>
    <string name="biography_text">Biography</string>
    <string name="adventure_text">Adventure</string>
    <string name="crime_text">Crime</string>
    <string name="history_text">History</string>
    <string name="western_text">Western</string>
    <string name="sports_text">Sports</string>
    <string name="comedy_text">Comedy</string>
    <string name="horror_text">Horror</string>
    <string name="documentary_text">Documentary</string>
    <string name="drama_text">Drama</string>
    <string name="family_text">Family</string>
    <string name="fantasy_text">Fantasy</string>
    <string name="romance_text">Romance</string>
    <string name="sci_fi_text">Sci-fi</string>

    <string name="sign_up_text_top">sign up</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="sign_up_btn_text">Sign Up</string>
    <string name="email_sign_up_text">Email</string>
    <string name="password_sign_up_text">Password</string>
    <string name="confirm_password_sign_up_text">Confirm password</string>
    <string name="full_name_sign_up_text">Full Name</string>
    <string name="c_est_ue_activit_test_pour_s_assurer_que_mon_traitement_marche_bien">C\'est ue activité test pour s\'assurer que mon traitement marche bien.</string>
    <string name="result">Result</string>
    <string name="modify">modify</string>
    <string name="logout" />
    <string name="logoutt">logout</string>
    <string name="oops">OOPS!</string>

</resources>