<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/skip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/skip_text" />
    </RelativeLayout>

    <TextView
        android:id="@+id/wdyl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_do_you_like"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/wdyl_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wdyl_description_text"
        android:textSize="15sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_margin="5dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/musical_text"
                    android:drawableTop="@drawable/musical"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/animation_text"
                    android:drawableTop="@drawable/animations"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_text"
                    android:drawableTop="@drawable/action"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/biography_text"
                    android:drawableTop="@drawable/biography"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adventure_text"
                    android:drawableTop="@drawable/adventure"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/crime_text"
                    android:drawableTop="@drawable/crime"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/history_text"
                    android:drawableTop="@drawable/history"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/western_text"
                    android:drawableTop="@drawable/western"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sports_text"
                    android:drawableTop="@drawable/sports"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_margin="5dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/comedy_text"
                    android:drawableTop="@drawable/comedy"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/horror_text"
                    android:drawableTop="@drawable/horror"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/documentary_text"
                    android:drawableTop="@drawable/documentary"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/drama_text"
                    android:drawableTop="@drawable/drama"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/family_text"
                    android:drawableTop="@drawable/family"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fantasy_text"
                    android:drawableTop="@drawable/fantasy"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/romance_text"
                    android:drawableTop="@drawable/romance"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sci_fi_text"
                    android:drawableTop="@drawable/scifi"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>